<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.androidproject.popularmovies11.DetailActivityFragment">

        <ImageView
            android:id="@+id/backdrop_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/movie_image"/>
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_title_size"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:textStyle="bold|italic"
            android:paddingBottom="@dimen/view_padding"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/view_padding">
            <LinearLayout
                android:id="@+id/ll_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/user_rating_label"
                    android:textSize="@dimen/detail_text_size"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/detail_text_size"
                    android:textColor="@color/text_color"
                    android:paddingLeft="@dimen/view_padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/detail_text_size"
                    android:textColor="@color/text_color"
                    android:text="@string/rating_out_of" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/user_votes_label"
                    android:textSize="@dimen/detail_text_size"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/detail_text_size"
                    android:textColor="@color/text_color"
                    android:paddingLeft="@dimen/view_padding"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/view_padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/release_date_label"
                android:textSize="@dimen/detail_text_size"
                android:textColor="@color/text_color"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_text_size"
                android:textColor="@color/text_color"
                android:paddingLeft="@dimen/view_padding"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:textSize="@dimen/detail_text_size"
            android:textColor="@color/text_color"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:textSize="@dimen/detail_text_size"
            android:textColor="@color/text_color"
            android:paddingBottom="@dimen/view_padding"/>
    </LinearLayout>
</ScrollView>